# picocalc_x86

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.TXT  README.md  ffconf.h  picocalc_x86.c  splash.h
linker_scripts/: default_rodata_excludes.incl  default_text_excludes.incl
misc/: font_test.asm
pico_x86/: CMakeLists.txt  bios.asm  bios_embed.S  bios_fonts.asm  bios_keyb.asm  bios_video.asm  font8x8.h  pico-ems.asm  pico_x86.c  pico_x86.h  pico_x86_floppy.h  pico_x86_serial.c  pico_x86_serial.h  pico_x86_video.c  pico_x86_video.h
picocalc_display/: CMakeLists.txt  font4x10.h  picocalc_display.c  picocalc_display.h  picocalc_display.pio
picocalc_sound/: CMakeLists.txt  picocalc_sound.c  picocalc_sound.h
picocalc_southbridge/: CMakeLists.txt  picocalc_southbridge.c  picocalc_southbridge.h
